Placeholder Sound Player + Sound File UI

--- a/style.css
+++ b/style.css
@@ -146,3 +146,20 @@ html, body {
 #heatmap-controls .heatmap-mode span {
     white-space: nowrap;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#file-selection-controls { }
+#audio-file-input { }
+#audio-file-controls button { }
